// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ntd should change correctly 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      貨幣轉換
    </h2>
    <div
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          ntd
        </span>
      </div>
      <input
        class="form-control"
        data-testid="HW10Input"
        name="ntd"
        value="60"
      />
    </div>
    <div
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          usd
        </span>
      </div>
      <input
        class="form-control"
        data-testid="HW10Input"
        name="usd"
        value="02"
      />
    </div>
  </div>
</div>
`;

exports[`usd should change correctly 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      貨幣轉換
    </h2>
    <div
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          ntd
        </span>
      </div>
      <input
        class="form-control"
        data-testid="HW10Input"
        name="ntd"
        value="090"
      />
    </div>
    <div
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          usd
        </span>
      </div>
      <input
        class="form-control"
        data-testid="HW10Input"
        name="usd"
        value="3"
      />
    </div>
  </div>
</div>
`;
